# python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cup/: __init__.py  __main__.py  _base.py  _router.py  format.py  search.py
cup/actions/: __init__.py  _handler.py  _keys.py  _linux.py  _macos.py  _web.py  _windows.py  executor.py
cup/mcp/: __init__.py  __main__.py  server.py
docs/: api-reference.md
examples/: agent.py
examples/cross-os/: README.md  agent.py  cup_remote.py  cup_server.py  mcp_server.py
schema/: README.md
tests/: test_actions.py  test_batch.py  test_find.py  test_format.py  test_page.py  test_router.py  test_schema.py  test_screenshot.py  test_web_actions.py
