[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computeruseprotocol"
version = "0.1.0"
description = "Python SDK for the Computer Use Protocol — universal cross-platform UI accessibility"
readme = "README.md"
license = "MIT"
authors = [{ name = "CUP Contributors", email = "cup@computeruseprotocol.com" }]
requires-python = ">=3.10"
keywords = ["accessibility", "ui-automation", "ai-agents", "computer-use", "aria"]
dependencies = [
    "comtypes>=1.2; sys_platform == 'win32'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
web = ["websocket-client>=1.6"]
screenshot = ["mss>=6.0"]
mcp = ["mcp>=1.6", "mss>=6.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "jsonschema>=4.20", "ruff>=0.8", "mypy>=1.13"]

[project.scripts]
cup = "cup.__main__:main"
cup-mcp = "cup.mcp.__main__:main"

[project.urls]
Homepage = "https://computeruseprotocol.com"
Repository = "https://github.com/computeruseprotocol/python-sdk"
Specification = "https://github.com/computeruseprotocol/computeruseprotocol"
Documentation = "https://computeruseprotocol.com"

[tool.hatch.build.targets.wheel]
packages = ["cup"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length — handled by formatter
    "E741",   # ambiguous variable name — false positives in comprehensions
    "SIM102", # collapsible if — readability preference
    "SIM103", # return condition directly — readability preference
    "SIM105", # contextlib.suppress — try/except/pass is clearer
    "SIM108", # ternary — readability preference
    "SIM112", # capitalized env var — Windows env vars are case-insensitive
    "SIM117", # nested with — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E731", "F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# capture() returns str | dict depending on compact flag — union narrowing
# causes false positives at every call site. Suppress until overloads are added.
disable_error_code = ["return-value", "assignment", "arg-type", "no-any-return"]
